Mon Jan  8 17:58:46 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * tests/Bug_1890_Regression_Test.cpp:

          Bug 1890 is specifically targeted for the Select Reactor.  So,
          instead of relying on ACE_Reactor::instance() being an
          ACE_Select_Reactor, explicitly use the ACE_Select_Reactor impl.
          This will fix this test on Windows.

Mon Jan  8 16:51:55 UTC 2007  Wallace Zhang  <zhang_w@ociweb.com>

        * tests/Bug_2368_Regression_Test.cpp:

          Improved the test output to show the failure caused by the
          unresolved bug is expected.

Mon Jan  8 13:48:17 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * examples/APG/Logging/Trace.h:

          Undefine TRACE before defining it to avoid warnings from vc71.

Mon Jan  8 12:41:30 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/TP_Reactor.cpp:
          Also use ACE_DISABLE_NOTIFY_PIPE_DEFAULT in the constructors

Mon Jan  8 12:00:30 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Select_Reactor_T.cpp:
          Const improvement

        * ace/Select_Reactor_T.h :
          Also use ACE_DISABLE_NOTIFY_PIPE_DEFAULT in the constructors

Mon Jan  8 11:23:30 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Select_Reactor_T.h (open):
          Also use ACE_DISABLE_NOTIFY_PIPE_DEFAULT as default for disable_notify_pipe

        * ace/Select_Reactor_T.h:
          Doxygen improvements

Mon Jan  8 10:45:30 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Select_Reactor_Base.h:
          Doxygen improvements

        * ace/Select_Reactor_Base.h:
          Changed the way we set the default for the
          ACE_Select_Reactor_Notify::open call, instead of just hardcoding
          the default 0, use the ACE_DISABLE_NOTIFY_PIPE_DEFAULT define
          which is set by default to 0, but which we can set from a
          config file to 1 to disable the notification pipe.
